; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_slub.c_kmem_cache_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_slub.c_kmem_cache_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kmem_cache = type { i32 }
%struct.page = type { i32 }

@_RET_IP_ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kmem_cache_free(%struct.kmem_cache* %0, i8* %1) #0 {
  %3 = alloca %struct.kmem_cache*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.page*, align 8
  store %struct.kmem_cache* %0, %struct.kmem_cache** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call %struct.page* @virt_to_head_page(i8* %6)
  store %struct.page* %7, %struct.page** %5, align 8
  %8 = load %struct.kmem_cache*, %struct.kmem_cache** %3, align 8
  %9 = load %struct.page*, %struct.page** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i32, i32* @_RET_IP_, align 4
  %12 = call i32 @slab_free(%struct.kmem_cache* %8, %struct.page* %9, i8* %10, i32 %11)
  %13 = load i32, i32* @_RET_IP_, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @trace_kmem_cache_free(i32 %13, i8* %14)
  ret void
}

declare dso_local %struct.page* @virt_to_head_page(i8*) #1

declare dso_local i32 @slab_free(%struct.kmem_cache*, %struct.page*, i8*, i32) #1

declare dso_local i32 @trace_kmem_cache_free(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
